<resources>
    <string name="app_name">BE-PRF-2023-B-G1-Mobile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_tittle">RespirAR</string>
    <string name="client_web_url">www.ciudadesdelfuturo.org.ar</string>
    <string name="stations">Estaciones</string>
    <string name="requests">Solicitudes</string>
    <string name="profile">Perfil</string>
    <string name="account">Cuenta</string>
    <string name="coming_soon">Proximamente</string>
    <string name="map">Mapa</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="token">eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJPbmxpbmUgSldUIEJ1aWxkZXIiLCJpYXQiOjE2ODQzNjg2NTUsImV4cCI6MTcxNTkwNDY1NSwiYXVkIjoid3d3LmV4YW1wbGUuY29tIiwic3ViIjoianJvY2tldEBleGFtcGxlLmNvbSIsImlkIjoiMiIsInJvbCI6InVzZXIifQ.4MrjfaEglT5NOHLsf_cldZCcxbUX8vNC62qoLp9XpaY</string>
    <string name="id_user">2</string>
    <string name="station_details">Detalles de la Estación</string>
    <string name="request_details">Detalles de la Solicitud</string>
    <string name="name">Nombre</string>
    <string name="serial_number">Nº de Serie</string>
    <string name="status">Estado</string>
    <string name="brand">Marca</string>
    <string name="model">Modelo</string>
    <string name="longitude">Longitud</string>
    <string name="latitude">Latitud</string>
    <string name="user_name">Solicitante</string>
    <string name="created_at">Fecha de Creación</string>
    <string name="approved_at">Fecha de Aprobación</string>
    <string name="edit">Editar</string>
    <string name="suspend">Inactivar</string>
    <string name="station">Estación</string>
    <string name="approve">Aprobar</string>
    <string name="reject">Rechazar</string>
    <string name="request">Solicitar</string>
    <string name="request_station">Solicitar Estación</string>
    <string name="details">Detalles</string>
    <string name="cancel">Cancelar</string>
    <string name="back">Volver</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="fragment_title">Titulo</string>
    <string name="save">Guardar</string>
    <string name="edit_station">Editar Estación</string>
    <string name="suspend_station">Inactivar Estación</string>
    <string name="suspend_msg">¿Esta seguro de inactivar esta Estación?</string>
    <string name="request_sent">Solicitud Enviada</string>
    <string name="request_sent_msg">Se enviará un Mail a su casilla cuando su solicitud sea resuelta</string>
    <string name="accept">Aceptar</string>
</resources>