<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/stationsFragment"
            android:icon="@drawable/ic_stations"
            android:title="@string/stations" />
        <item
            android:id="@+id/requestsFragment"
            android:icon="@drawable/ic_requests"
            android:title="@string/requests" />
        <item
            android:id="@+id/mapFragment"
            android:icon="@drawable/ic_map"
            android:title="@string/map" />

    </group>


    <item android:title="@string/account">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/profileFragment"
                    android:icon="@drawable/ic_account"
                    android:title="@string/profile" />
            </group>
        </menu>
    </item>

</menu>