<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundLight"
    tools:context=".fragments.RequestDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_details"
            android:layout_width="211dp"
            android:layout_height="28dp"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/product_sans_bold"
            android:text="@string/request_details"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/btn_back_requests"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="379dp"
            android:layout_height="456dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="#D7E1F0"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_details">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/vertical_layout_request"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="5dp">

                    <TextView
                        android:id="@+id/lbl_serial_number"
                        style="@style/ItemTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/serial_number" />

                    <TextView
                        android:id="@+id/txt_serial_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/product_sans_regular"
                        android:text="X" />

                    <TextView
                        android:id="@+id/lbl_station_name"
                        style="@style/ItemTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name" />

                    <TextView
                        android:id="@+id/txt_station_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/product_sans_regular"
                        android:text="X" />

                    <TextView
                        android:id="@+id/lbl_created_at"
                        style="@style/ItemTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/created_at" />

                    <TextView
                        android:id="@+id/txt_created_at"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/product_sans_regular"
                        android:text="X" />

                    <TextView
                        android:id="@+id/lbl_model"
                        style="@style/ItemTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/model" />

                    <TextView
                        android:id="@+id/txt_model"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/product_sans_regular"
                        android:text="X" />

                    <TextView
                        android:id="@+id/lbl_brand"
                        style="@style/ItemTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/brand" />

                    <TextView
                        android:id="@+id/txt_brand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/product_sans_regular"
                        android:text="X" />

                    <TextView
                        android:id="@+id/lbl_status"
                        style="@style/ItemTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status" />

                    <TextView
                        android:id="@+id/txt_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/product_sans_regular"
                        android:text="X" />

                    <TextView
                        android:id="@+id/lbl_longitude"
                        style="@style/ItemTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/longitude" />

                    <TextView
                        android:id="@+id/txt_longitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/product_sans_regular"
                        android:text="X" />

                    <TextView
                        android:id="@+id/lbl_latitude"
                        style="@style/ItemTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/latitude" />

                    <TextView
                        android:id="@+id/txt_latitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/product_sans_regular"
                        android:text="X" />

                    <TextView
                        android:id="@+id/lbl_user"
                        style="@style/ItemTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_name" />

                    <TextView
                        android:id="@+id/txt_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/product_sans_regular"
                        android:text="X" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <ImageButton
            android:id="@+id/btn_back_requests"
            android:layout_width="24dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="12dp"
            android:background="#00FFFFFF"
            android:src="@drawable/ic_arrow_back"
            android:tint="#000000"
            app:layout_constraintEnd_toStartOf="@+id/text_details"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseAppTint,TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>